--- a/index.html
+++ b/index.html
@@ -1,19 +1,26 @@
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Equipe Alura Start</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+
 </head>
 <body>
     <header class="cabecalho">
-        <img class="cabecalho-imagem" src="alurastart logo.png" alt="logo da alura start">
+        <img class="cabecalho-imagem" src="vangoghartist.jpeg" alt="imagem de Van Gogh">
         <ul class="cabecalho-lista">
             <li class="cabecalho-lista-item">Escola</li>
             <li class="cabecalho-lista-item">Estudante</li>
         </ul>
-    </header>
+    </header>ng="en">
+<head>
+    <m
 
 
     <section class="escola">
@@ -24,6 +31,24 @@
         </div>
         <img class="escola-imagem" src="vangogh.webp" alt="Professora no quadro">
     </section>
+    <section class="estudante">
+        <h2 class="estudante-titulo">Quem são nossos estudantes?</h2>
+        <div class="estudante-div">
+            <img class="estudante-imagem" src="Marcelo.jpeg" alt="foto do marcelo">
+            <h3 class="estudante-nome">Marcelo</h3>
+            <img class="estudante-icone" src="github.png" alt="icone github">
+            <img class="estudante-icone" src="linkedin.png" alt="icone linkedin">
+            <img class="estudante-icone" src="instagram.png" alt="icone instagram">
+        </div>
+        <div class="estudante-div">
+            <img class="estudante-imagem" src="Marcelo.jpeg" alt="foto do marcelo">
+            <h3 class="estudante-nome">Marcelo</h3>
+            <img class="estudante-icone" src="github.png" alt="icone github">
+            <img class="estudante-icone" src="linkedin.png" alt="icone linkedin">
+            <img class="estudante-icone" src="instagram.png" alt="icone instagram">
+        </div>
+    </section>
+.    
 </body>
 
 </html>
