--- a/index.html
+++ b/index.html
@@ -34,14 +34,21 @@
     <section class="estudante">
         <h2 class="estudante-titulo">Quem são nossos estudantes?</h2>
         <div class="estudante-div">
-            <img class="estudante-imagem" src="Marcelo.jpeg" alt="foto do marcelo">
+            <img class="estudante-imagem" src="hurt.png" alt="um gato sentado olhando pra trás">
             <h3 class="estudante-nome">Marcelo</h3>
             <img class="estudante-icone" src="github.png" alt="icone github">
             <img class="estudante-icone" src="linkedin.png" alt="icone linkedin">
             <img class="estudante-icone" src="instagram.png" alt="icone instagram">
         </div>
         <div class="estudante-div">
-            <img class="estudante-imagem" src="Marcelo.jpeg" alt="foto do marcelo">
+            <img class="estudante-imagem" src="stalking.png" alt="um gato andando">
+            <h3 class="estudante-nome">Marcelo</h3>
+            <img class="estudante-icone" src="github.png" alt="icone github">
+            <img class="estudante-icone" src="linkedin.png" alt="icone linkedin">
+            <img class="estudante-icone" src="instagram.png" alt="icone instagram">
+        </div>
+        <div class="estudante-div">
+            <img class="estudante-imagem" src="stretch.png" alt="um gato se espreguiçando">
             <h3 class="estudante-nome">Marcelo</h3>
             <img class="estudante-icone" src="github.png" alt="icone github">
             <img class="estudante-icone" src="linkedin.png" alt="icone linkedin">
