--- a/index.html
+++ b/index.html
@@ -18,10 +18,7 @@
             <li class="cabecalho-lista-item">Escola</li>
             <li class="cabecalho-lista-item">Estudante</li>
         </ul>
-    </header>ng="en">
-<head>
-
-
+    </header>
     <section class="escola">
         <div class="escola-div-conteudo">
             <h2 class="escola-titulo">Sobre a Escola</h2>
