--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
+<!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,11 +9,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
-
 </head>
 <body>
     <header class="cabecalho">
-        <img class="cabecalho-imagem" src="vangoghartist.jpeg" alt="imagem de Van Gogh">
+        <img class="cabecalho-imagem" src="vangoghartist.jpeg" alt="Van Gogh">
         <ul class="cabecalho-lista">
             <li class="cabecalho-lista-item">Escola</li>
             <li class="cabecalho-lista-item">Estudante</li>
@@ -21,37 +20,42 @@
     </header>
     <section class="escola">
         <div class="escola-div-conteudo">
-            <h2 class="escola-titulo">Van Gogh</h2>
+            <h2 class="escola-titulo">Sobre a Escola</h2>
             <p class="escola-texto-um">Vincent van Gogh nasceu em 30 de março de 1853, na Holanda. Ele teve uma infância marcada por dificuldades e problemas emocionais. Van Gogh iniciou sua carreira artística relativamente tarde, aos 27 anos, mas produziu uma quantidade impressionante de obras em um curto período de tempo. Sua paleta de cores vibrantes e pinceladas expressivas tornaram-se suas marcas registradas. Van Gogh era um mestre em transmitir emoções e atmosferas em suas pinturas. Apesar do reconhecimento limitado durante sua vida, sua obra póstuma se tornou extremamente valorizada, influenciando profundamente o desenvolvimento da arte moderna.</p>
             <p class="escola-texto-dois">Hoje, suas obras são aclamadas mundialmente e estão entre as mais valiosas e reconhecidas da história da arte. Vincent van Gogh é lembrado não apenas por suas pinturas icônicas, mas também por sua intensa paixão pela arte e sua contribuição para a evolução da pintura moderna.</p>
         </div>
-        <img class="escola-imagem" src="vangogh.webp" alt="Professora no quadro">
+        <img class="escola-imagem" src="vangogh.webp" alt="noite estrelada">
     </section>
     <section class="estudante">
         <h2 class="estudante-titulo">Quem são nossos estudantes?</h2>
+        <div class="estudante-todos">
+        <span></span>
         <div class="estudante-div">
-            <img class="estudante-imagem" src="hurt.png" alt="um gato sentado olhando pra trás">
-            <h3 class="estudante-nome">Marcelo</h3>
-            <img class="estudante-icone" src="github.png" alt="icone github">
-            <img class="estudante-icone" src="linkedin.png" alt="icone linkedin">
-            <img class="estudante-icone" src="instagram.png" alt="icone instagram">
+            <img class="estudante-imagem" src="stalking.png" alt="foto de um gato preto">
+            <h3 class="estudante-nome">romeu</h3>
+            <a href="https://github.com/marcelopaludetto"><img class="estudante-icone" src="github.png" alt="icone github"></a>
+            <a href="https://linkedin.com/marcelopaludetto"><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
+            <a href="https://instagram.com/marcelopaludetto"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
         </div>
         <div class="estudante-div">
-            <img class="estudante-imagem" src="stalking.png" alt="um gato andando">
-            <h3 class="estudante-nome">Marcelo</h3>
-            <img class="estudante-icone" src="github.png" alt="icone github">
-            <img class="estudante-icone" src="linkedin.png" alt="icone linkedin">
-            <img class="estudante-icone" src="instagram.png" alt="icone instagram">
+            <img class="estudante-imagem" src="stretch.png" alt="foto do gato">
+            <h3 class="estudante-nome">jack</h3>
+            <a href="https://github.com/GabrielaM-L"><img class="estudante-icone" src="github.png" alt="icone github"></a>
+            <a href="https://www.linkedin.com/in/gabriela-marcomini-de-lima/"><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
+            <a href="https://www.instagram.com/gabriela_marcomini/"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
         </div>
         <div class="estudante-div">
-            <img class="estudante-imagem" src="stretch.png" alt="um gato se espreguiçando">
-            <h3 class="estudante-nome">Marcelo</h3>
-            <img class="estudante-icone" src="github.png" alt="icone github">
-            <img class="estudante-icone" src="linkedin.png" alt="icone linkedin">
-            <img class="estudante-icone" src="instagram.png" alt="icone instagram">
+            <img class="estudante-imagem" src="hurt.png" alt="foto do gato">
+            <h3 class="estudante-nome">jay</h3>
+            <a href="https://github.com/LizandraDuarte40"><img class="estudante-icone" src="github.png" alt="icone github"></a>
+            <a href="https://www.linkedin.com/in/lizandrarlm-duarte/"><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
+            <a href="https://www.instagram.com/lizandrarlm"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
         </div>
+        <span></span>
+     </div>
     </section>
-    
+    <footer class="rodape">
+        <img class="rodape-imagem"src="alurastart logo.png" alt="logo da alura start">
+    </footer>
 </body>
-
 </html>
