--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
      </div>
     </section>
     <footer class="rodape">
-        <img class="rodape-imagem"src="alurastart logo.png" alt="logo da alura start">
+        <img class="rodape-imagem"src="" alt="">
     </footer>
 </body>
 </html>
