--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
     <header class="cabecalho">
         <img class="cabecalho-imagem" src="vangoghartist.jpeg" alt="Van Gogh">
         <ul class="cabecalho-lista">
-            <li class="cabecalho-lista-item">Escola</li>
-            <li class="cabecalho-lista-item">Estudante</li>
+            <li class="cabecalho-lista-item">Van Gogh</li>
+            <li class="cabecalho-lista-item">Artes</li>
         </ul>
     </header>
     <section class="escola">
         <div class="escola-div-conteudo">
-            <h2 class="escola-titulo">Sobre a Escola</h2>
+            <h2 class="escola-titulo">Van Gogh</h2>
             <p class="escola-texto-um">Vincent van Gogh nasceu em 30 de março de 1853, na Holanda. Ele teve uma infância marcada por dificuldades e problemas emocionais. Van Gogh iniciou sua carreira artística relativamente tarde, aos 27 anos, mas produziu uma quantidade impressionante de obras em um curto período de tempo. Sua paleta de cores vibrantes e pinceladas expressivas tornaram-se suas marcas registradas. Van Gogh era um mestre em transmitir emoções e atmosferas em suas pinturas. Apesar do reconhecimento limitado durante sua vida, sua obra póstuma se tornou extremamente valorizada, influenciando profundamente o desenvolvimento da arte moderna.</p>
             <p class="escola-texto-dois">Hoje, suas obras são aclamadas mundialmente e estão entre as mais valiosas e reconhecidas da história da arte. Vincent van Gogh é lembrado não apenas por suas pinturas icônicas, mas também por sua intensa paixão pela arte e sua contribuição para a evolução da pintura moderna.</p>
         </div>
